<resources>
    <string name="app_name">Naviversity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Inserisci destinazione</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="crea_account">Crea Account</string>
    <string name="registration_name">Nome</string>
    <string name="registration_surname">Cognome</string>
    <string name="registration_number">Numero di Telefono</string>
    <string name="registration_phone">Numero di Telefono</string>
    <string name="error_weak_password">Password troppo corta</string>
    <string name="error_invalid_email">Email non valida</string>
    <string name="error_user_exists">Utente esistente</string>
    <string name="operation_not_permitted">Non puoi eseguire questa operazione</string>
    <string name="db_ride">ride</string>
    <string name="db_place">place</string>
    <string name="db_notification">notification</string>
    <string name="correct_deleted_place">Luogo eliminato con successo</string>
    <string name="correct_created_place">Luogo creato con successo</string>
    <string name="choose_type">Selezionare una tipologia</string>
    <string name="choose_name">Inserire un nome</string>
    <string name="confirm_deletion">Conferma eliminazione</string>
    <string name="touch_to_delete_place">Tocca qui per eliminare il luogo</string>
    <string name="touch_to_create_place">Tocca la mappa per creare nuovi luoghi</string>
    <string name="Start">Partenza</string>
    <string name="db_start">START</string>
    <string name="db_stop">STOP</string>
    <string name="booking_confirmed">Prenotazione confermata</string>
    <string name="notification_key_pattern">yyyy-MM-dd|HH:mm:ss</string>
    <string name="thanks_for_feedback">grazie per il feedback</string>
    <string name="deleted_to_ride">Ti sei cancellato dalla corsa</string>
    <string name="deleted_ride">Hai eliminato la corsa</string>
    <string name="db_user">user</string>
    <string name="confirm_ride_creation">Corsa creata correttamente</string>
    <string name="car_needed">Prima ti serve un\'automobile</string>
    <string name="time_format">%02d:%02d</string>
    <string name="date_format">d/M/yyyy</string>
    <string name="insert_value">Inserisci un valore</string>
    <string name="selected_place_type">"Tocca qui per selezionare come punto di "</string>
    <string name="start">partenza</string>
    <string name="stop">arrivo</string>
    <string name="choose_destination">Scegli destinazione</string>
    <string name="accept_permission_position_create">Devi accettare i permessi alla posizione esatta per creare una corsa</string>
    <string name="activate_localization">Devi attivare la localizzazione per creare una corsa</string>
    <string name="choose_start">Scegli punto di partenza</string>
    <string name="invalid_time">Orario non valido</string>
    <string name="invalid_date">Data non valida</string>
    <string name="no_notification">Non hai ancora nessuna notifica</string>
    <string name="confirm_car_delete">Automobile eliminata correttamente</string>
    <string name="confirm_car_update">Automobile aggiornata correttamente</string>
    <string name="confirm_car_addition">Automobile aggiunta correttamente</string>
    <string name="car_model_insert">Devi inserire un modello di auto</string>
    <string name="car_color_insert">Devi inserire un colore di auto</string>
    <string name="car_plate_insert">Devi inserire una targa di auto</string>
    <string name="car_plate_valid_insert">Devi inserire una targa valida</string>
    <string name="profile_images_path">/profile_images/</string>
    <string name="accept_all_permissions">Devi accettare tutti i permessi per usare correttamente l\'app</string>
    <string name="insert_mail">Inserisci e-mail</string>
    <string name="insert_password">Inserisci password</string>
    <string name="unict_mail_verify">Devi prima verificare la tua email universitaria</string>
    <string name="incorrect_credentials">Accesso non riuscito. Verifica i dati inseriti</string>
    <string name="image_updated">Immagine aggiornata</string>
    <string name="accept_storage_permission">Devi accettare i permessi allo storage del dispositivo</string>
    <string name="post_logout">Hai eseguito il logout</string>
    <string name="italian_plate_regex">^[A-Z]{2}[0-9]{3}[A-Z]{2}$</string>
    <string name="select_profile_image">Seleziona immagine del profilo</string>
    <string name="mail_unict_domain">studium.unict.it</string>
    <string name="email_regex_pattern">^[A-Za-z0-9._%+-]+@</string>
    <string name="insert_unict_mail">Inserire un\'e-mail unict</string>
    <string name="insert_a_password">Inserire una password</string>
    <string name="insert_a_name">Inserire un nome</string>
    <string name="insert_a_surname">Inserire un cognome</string>
    <string name="insert_a_phone">Inserire un cellulare</string>
    <string name="must_choose_profile_image">Devi scegliere un\'immagine del profilo</string>
    <string name="confirmation_mail_send">Ti è stata mandata una e-mail di conferma</string>
    <string name="touch_to_view_rides">Tocca per visualizzare le corse disponibili</string>
    <string name="no_ride_found">Nessuna corsa trovata</string>
    <string name="active_localization_search">Devi attivare la localizzazione per cercare una corsa</string>
    <string name="accept_permission_position_search">Devi accettare i permessi alla posizione esatta per fare una ricerca</string>
    <string name="accept_permission_position">Devi accettare i permessi alla posizione esatta</string>
    <string name="insert_start">Inserire punto di partenza</string>
    <string name="insert_stop">Inserire punto di destinazione</string>
    <string name="insert_day">Inserire giorno</string>
    <string name="insert_time">Inserire orario</string>

    <string-array name="car_colors">
        <item>Rosso</item>
        <item>Nero</item>
        <item>Blu</item>
        <item>Bianco</item>
        <item>Verde</item>
        <item>Grigio</item>
        <item>Arancione</item>
        <item>Giallo</item>
    </string-array>

    <string-array name="car_models">
        <item>FIAT</item>
        <item>RENAULT</item>
        <item>FORD</item>
        <item>AUDI</item>
        <item>BMW</item>
        <item>NISSAN</item>
    </string-array>

    <string-array name="place_types">
        <item>Partenza</item>
        <item>Destinazione</item>
    </string-array>
</resources>