<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="76dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unict_logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/crea_account"
        app:layout_constraintBottom_toTopOf="@+id/emailInputLayout"
        app:layout_constraintStart_toStartOf="@+id/emailInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/email"
            android:text="rosario.am@outlook.it"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="371dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/nameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:focusable="true"
            android:text="xxxxxxx"
            android:hint="@string/password"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="371dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/surnameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/registration_name"
            android:text="Rosario"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="371dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/phone_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="Amantia"
            android:hint="@string/registration_surname"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="371dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/car_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/registration_phone"
            android:text="3450538443"
            android:inputType="phone"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="371dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/car_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Possiedi un'automobile?"
        app:layout_constraintStart_toStartOf="@+id/phone_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/phone_input_layout" />

    <EditText
        android:id="@+id/car_model_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Modello"
        android:visibility="gone"
        android:maxLength="15"
        app:layout_constraintBottom_toTopOf="@+id/car_color_input_layout"
        app:layout_constraintStart_toStartOf="@+id/car_switch"
        app:layout_constraintTop_toBottomOf="@+id/car_switch" />

    <EditText
        android:id="@+id/car_plate_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:visibility="gone"
        android:hint="Targa"
        android:maxLength="7"
        app:layout_constraintStart_toEndOf="@+id/car_model_txt"
        app:layout_constraintTop_toBottomOf="@+id/car_switch" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/car_color_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:hint="Colore"
        app:layout_constraintStart_toStartOf="@+id/car_model_txt"
        app:layout_constraintTop_toBottomOf="@+id/car_model_txt">

        <AutoCompleteTextView
            android:id="@+id/car_color_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="Colore" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:onClick="login"
        android:text="Registrati"
        app:layout_constraintEnd_toEndOf="@+id/phone_input_layout"
        app:layout_constraintStart_toStartOf="@+id/car_color_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/car_switch" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Hai già un account?"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/logTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="Accedi"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>